fixing jump when reset form button appear

--- a/src/ggrc/assets/stylesheets/_modal.scss
+++ b/src/ggrc/assets/stylesheets/_modal.scss
@@ -468,6 +468,9 @@
   }
   .reset-form {
     display: none;
+    p {
+      margin: 0;
+    }
   }
   .row-fluid {
     [class*="span"] {
